Modify requirements.txt for package updates
Updated package versions and added new dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask==2.2.5
-gunicorn==21.2.0
-pandas
-lxml
-qrcode
-reportlab
-PyPDF2
+flask
+gunicorn
 requests
-flask_sqlalchemy
+pandas
 openpyxl
+reportlab
+qrcode
+Pillow
+PyPDF2
+Flask-SQLAlchemy
+SQLAlchemy
